--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,3 +7,20 @@
   color: #ffffff;
   margin: 0 320px 64px 320px;
 }
+@media screen and (max-width:1279px) {
+  .lead__subtitle{
+    margin: 0 192px 56px 192px;
+  }
+}
+@media screen and (max-width:1023px) {
+  .lead__subtitle{
+    margin: 0 64px 56px 64px;
+  }
+}
+@media screen and (max-width:767px) {
+  .lead__subtitle{
+    margin: 0 16px 40px 16px;
+    font-size: 16px;
+    line-height: 1.25;
+  }
+}
