--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,5 @@
 .cover__title {
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
   font-size: 72px;
   line-height: 1.06;
@@ -11,7 +11,20 @@
   z-index: 1;
 }
 @media screen and (max-width: 1279px) {
-    .cover__title{
-      margin: 195px 0 293px 232px;
-    }
+  .cover__title {
+    margin: 195px 0 32px 232px;
   }
+}
+@media screen and (max-width: 1023px) {
+  .cover__title {
+    margin: 115px 0 32px 104px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 1.09;
+    margin: 33px 0 16px 16px;
+    max-width: 288px;
+  }
+}
