--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,3 +1,18 @@
 .cover {
   margin: 92px 48px;
 }
+@media screen and (max-width:1279px) {
+  .cover{
+    margin: 92px 0px;
+  }
+}
+@media screen and (max-width:1023px) {
+  .cover{
+    margin: 90px 0px 88px 0px;
+  }
+}
+@media screen and (max-width:767px) {
+  .cover{
+    margin: 66px 0px 64px 0px;
+  }
+}
