--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,3 +1,15 @@
-.footer__copyright{
-  font-family:'Inter', Arial, sans-serif;
+.footer__copyright {
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: right;
+  color: #ffffff;
+  max-width: 186px;
+}
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    line-height: 1;
+    text-align:start;
+  }
 }
