--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,13 +3,20 @@
   color: #ffffff;
   max-width: 50px;
   margin-right: 18px;
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.12;
 }
-.footer__link:hover{
-    opacity: 0.8;
+.footer__link:hover {
+  opacity: 0.8;
 }
-
-
+@media screen and (max-width: 767px) {
+  .footer__link {
+    max-width: 74px;
+    font-size: 24px;
+    line-height: 1;
+    margin: 0 0 32px 0;
+    display: flex;
+  }
+}
