--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,6 +1,12 @@
-.footer__links{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    padding: 0;
+.footer__links {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+}
+@media screen and (max-width: 767px) {
+  .footer__links {
+    flex-direction: column;
+    margin: 0;
+  }
 }
