--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,3 +5,21 @@
     justify-content: space-between;
     color: #FFFFFF;
 }
+@media screen and (max-width:1279px) {
+    .footer{
+        max-width: 928px;
+    }
+  }
+  @media screen and (max-width:1023px) {
+    .footer{
+        max-width: 720px;
+        margin: 88px 24px 24px 24px;
+    }
+  }
+  @media screen and (max-width:767px) {
+    .footer{
+        max-width: 186px;
+        margin: 64px 118px 24px 16px;
+        flex-direction: column;
+    }
+  }
