--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,4 +7,18 @@
   list-style: none;
   margin: 46px 48px 0 0;
   padding:0;
+  max-width: 30px;
+  min-height: 28px;
+}
+@media screen and (max-width:1023px) {
+  .header__lang-link{
+    margin: 46px 24px 0 0;
+  }
+}
+@media screen and (max-width:767px) {
+  .header__lang-link{
+    margin: 30px 16px 0 0;
+    max-width: 22px;
+    min-height: 20px;
+  }
 }
