--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,17 @@
 .header__logo{
   margin: 28px 0 0 48px;
-  width: 176px;
-  height: 52px;
-
+  max-width: 176px;
+  min-height: 52px;
+}
+@media screen and (max-width:1023px) {
+  .header__logo{
+    margin: 28px 0 0 24px;
+  }
+}
+@media screen and (max-width:767px) {
+  .header__logo{
+    max-width: 142px;
+    min-height: 42px;
+    margin: 16px 0 0 16px;
+  }
 }
