--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,24 @@
 .header{
   display: flex;
   justify-content: space-between;
+  margin-bottom: 56px;
+  max-width: 1184px;
+}
+@media screen and (max-width:1279px) {
+  .header{
+    margin-bottom: 48px;
+    max-width: 928px;
+  }
+}
+@media screen and (max-width:1023px) {
+  .header{
+    margin-bottom: 48px;
+    max-width: 720px;
+  }
+}
+@media screen and (max-width:767px) {
+  .header{
+    margin-bottom: 48px;
+    max-width: 288px;
+  }
 }
