--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,3 +3,20 @@
   max-width: 690px;
   color: #FFFFFF;
 }
+@media screen and (max-width: 1279px) {
+  .intro {
+    margin: 92px 0px 92px 48px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .intro {
+    margin: 88px 0px 88px 24px;
+    max-width: 720px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .intro {
+    margin: 64px 0px 64px 16px;
+    max-width: 288px;
+  }
+}
