--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,5 +6,21 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #ffffff;
-  margin: 0;
+  margin: 0 0 0 148px;
+  max-width: 158px;
+}
+@media screen and (max-width: 1279px) {
+  .lead__caption {
+    margin: 0 0 0 48px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .lead__caption {
+    margin: 0 0 0 24px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .lead__caption {
+    margin: 0 0 0 16px;
+  }
 }
