--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,3 +8,20 @@
   margin: 0 280px 32px 280px;
   max-width: 720px;
 }
+@media screen and (max-width:1279px) {
+  .lead__title{
+    margin: 0 152px 32px 152px;
+  }
+}
+@media screen and (max-width:1023px) {
+  .lead__title{
+    margin: 0 24px 32px 24px;
+  }
+}
+@media screen and (max-width:767px) {
+  .lead__title{
+    margin: 0 16px 16px 16px;
+    font-size: 40px;
+    line-height: 1.1;
+  }
+}
