--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,3 +1,13 @@
 .lead{
-  margin: 0 auto;
+  margin: 0 auto 92px auto;
+}
+@media screen and (max-width: 1023px) {
+  .lead {
+    margin: 0 auto 88px auto;
+  }
+}
+@media screen and (max-width: 767px) {
+  .lead {
+    margin: 0 auto 64px auto;
+  }
 }
