--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,4 +3,23 @@
   min-height: 6875px;
   background-color: #2A2C2F;
   font-family: 'Inter', Arial, sans-serif;
+  text-rendering: optimizeLegibility;
+}
+@media screen and (max-width:1279px) {
+  .page{
+    max-width: 1024px;
+    min-height: 6895px;
+  }
+}
+@media screen and (max-width:1023px) {
+  .page{
+    max-width: 768px;
+    min-height: 6855px;
+  }
+}
+@media screen and (max-width:767px) {
+  .page{
+    max-width: 320px;
+    min-height: 10023px;
+  }
 }
