--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,3 +6,8 @@
   color: #ffffff;
   margin: 0 0 26px 0;
 }
+@media screen and (max-width: 1279px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
+}
