--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,3 +6,15 @@
   color: #ffffff;
   margin: 0;
 }
+@media screen and (max-width: 1023px) {
+  .place__paragraph {
+    font-size: 42px;
+    line-height: 1.1;
+  }
+}
+@media screen and (max-width: 767px) {
+  .place__paragraph {
+    font-size: 32px;
+    line-height: 1.09;
+  }
+}
