--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,29 @@
-.place{
-display: grid;
-grid-template-columns:460px 1fr;
-column-gap: 40px;
-row-gap: 48px;
-margin-bottom: 80px;
+.place {
+  display: grid;
+  grid-template-columns: 460px 1fr;
+  column-gap: 40px;
+  row-gap: 48px;
+  margin-bottom: 80px;
 }
+.place:last-child{
+    margin-bottom: 0px;
+}
+@media screen and (max-width: 1279px) {
+  .place {
+    grid-template-columns: 440px 1fr;
+    column-gap: 32px;
+  }
+}
+@media screen and (max-width: 1023px) {
+    .place {
+      grid-template-columns: 340px 1fr;
+      column-gap: 28px;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .place {
+      grid-template-columns: 1fr;
+      row-gap: 32px;
+      margin-bottom: 50px;
+    }
+  }
