--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,22 @@
 .places{
     margin: 92px 148px;
+    max-width: 984px;
 }
+@media screen and (max-width: 1279px) {
+    .places {
+      margin: 92px 48px;
+      max-width: 928px;
+    }
+  }
+  @media screen and (max-width: 1023px) {
+    .places {
+      margin: 88px 24px 90px 24px;
+      max-width: 720px;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .places {
+      margin: 64px 0px 66px 0px;
+      max-width: 320px;
+    }
+  }
