--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,11 +2,13 @@
     src: url(../Inter-3.19/Inter\ Web/Inter-Regular.woff2) format('woff2');
     src: url(../Inter-3.19/Inter\ Web/Inter-Regular.woff) format('woff');
     font-family: 'Inter';
-    font-weight: normal;
+    font-style:  normal;
+    font-weight: 400;
 }
 @font-face {
-    src: url(../Inter-3.19/Inter\ Web/Inter-Bold.woff2) format('woff2');
-    src: url(../Inter-3.19/Inter\ Web/Inter-Bold.woff) format('woff');
+    src: url(../Inter-3.19/Inter\ Web/Inter-Black.woff2) format('woff2');
+    src: url(../Inter-3.19/Inter\ Web/Inter-Black.woff) format('woff');
     font-family: 'Inter';
-    font-weight: bold;
+    font-style:  normal;
+    font-weight: 900;
 }
