change img name

--- a/blocks/cover/cover__photo/cover__photo.css
+++ b/blocks/cover/cover__photo/cover__photo.css
@@ -1,5 +1,5 @@
 .cover__photo{
-  background-image: url(../../../images/cover__background\ \(1\).png);
+  background-image: url(../../../images/cover__background.png);
   max-width: 1184px;
   min-height: 740px;
   display: flex;
