--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,14 +1,21 @@
 @font-face {
-    src: url(../Inter-3.19/Inter\ Web/Inter-Regular.woff2) format('woff2');
-    src: url(../Inter-3.19/Inter\ Web/Inter-Regular.woff) format('woff');
+    src: url(../vendor/Inter\ Web/Inter-Regular.woff2) format('woff2');
+    src: url(../vendor/Inter\ Web/Inter-Regular.woff) format('woff');
     font-family: 'Inter';
     font-style:  normal;
     font-weight: 400;
 }
 @font-face {
-    src: url(../Inter-3.19/Inter\ Web/Inter-Black.woff2) format('woff2');
-    src: url(../Inter-3.19/Inter\ Web/Inter-Black.woff) format('woff');
+    src: url(../vendor/Inter\ Web/Inter-Black.woff2) format('woff2');
+    src: url(../vendor/Inter\ Web/Inter-Black.woff) format('woff');
     font-family: 'Inter';
     font-style:  normal;
     font-weight: 900;
+}
+@font-face {
+    src: url(../vendor/Inter\ Web/Inter-Bold.woff2) format('woff2');
+    src: url(../vendor/Inter\ Web/Inter-Bold.woff) format('woff');
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 700;
 }
