--- a/blocks/header/__lang-link/_lang/header__lang-link_lang_ru.css
+++ b/blocks/header/__lang-link/_lang/header__lang-link_lang_ru.css
@@ -1,4 +1,9 @@
 .header__lang-link_lang_ru{
-  color:#FFFFFF;
   padding:0 18px 0 0;
+  margin: 46px 0 0 0;
+}
+@media screen and (max-width:767px) {
+  .header__lang-link_lang_ru{
+    margin: 30px 16px 0 0;
+  }
 }
