--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,16 +5,24 @@
   line-height: 1.06;
   color: #ffffff;
   margin: 0;
+  max-width: 460px;
+}
+@media screen and (max-width: 1279px) {
+  .place__title {
+    max-width: 440px;
+  }
 }
 @media screen and (max-width: 1023px) {
-  .place__paragraph {
+  .place__title {
     font-size: 42px;
     line-height: 1.1;
+    max-width: 340px;
   }
 }
 @media screen and (max-width: 767px) {
-  .place__paragraph {
+  .place__title {
     font-size: 32px;
     line-height: 1.09;
+    max-width: 288px;
   }
 }
