--- a/blocks/header/__lang-link/_lang/header__lang-link_lang_ru.css
+++ b/blocks/header/__lang-link/_lang/header__lang-link_lang_ru.css
@@ -4,6 +4,6 @@
 }
 @media screen and (max-width:767px) {
   .header__lang-link_lang_ru{
-    margin: 30px 16px 0 0;
+    margin: 30px 0 0 0;
   }
 }
