--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,22 +1,20 @@
 .lead__image {
   max-width: 984px;
-  margin: 0 148px 8px 148px;
+  margin-bottom: 8px;
+  width: 100%;
 }
 @media screen and (max-width: 1279px) {
   .lead__image {
     max-width: 928px;
-    margin: 0px 48px 8px 48px;
   }
 }
 @media screen and (max-width: 1023px) {
   .lead__image {
     max-width: 768px;
-    margin: 0px 0px 8px 0px;
   }
 }
 @media screen and (max-width: 767px) {
   .lead__image {
     max-width: 320px;
-    margin: 0px 2px 8px 2px;
   }
 }
