--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,13 +1,23 @@
 .lead{
-  margin: 0 auto 92px auto;
+  /*margin: 0 auto 92px auto;*/
+  margin: 0 148px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+@media screen and (max-width: 1279px) {
+  .lead {
+  margin: 0px 48px;
+  }
 }
 @media screen and (max-width: 1023px) {
   .lead {
-    margin: 0 auto 88px auto;
+    /*margin: 0 auto 88px auto;*/
+    margin: 0;
   }
 }
 @media screen and (max-width: 767px) {
   .lead {
-    margin: 0 auto 64px auto;
+    margin: 0 2px;
   }
 }
