--- a/blocks/cover/__photo/cover__photo.css
+++ b/blocks/cover/__photo/cover__photo.css
@@ -1,5 +1,6 @@
 .cover__photo{
   background-image: url(../../../images/cover__background.png);
+  background-position: center;
   max-width: 1184px;
   min-height: 740px;
   display: flex;
