--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,14 +3,17 @@
   font-size: 24px;
   line-height: 117%;
   color:#FFFFFF;
-  display: flex;
-  flex-direction: row;
-  list-style: none;
-  padding:0;
+  text-decoration: none;
+  padding-left: 18px;
+  max-width: 30px;
+}
+.header__lang-link:hover{
+  opacity: 0.8;
 }
 @media screen and (max-width:767px) {
   .header__lang-link{
     font-size: 18px;
     line-height: 1.11;
+    max-width: 22px;
   }
 }
