--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,24 +1,24 @@
 .header{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 56px;
+  margin: 0 48px 56px 48px;
   max-width: 1184px;
 }
 @media screen and (max-width:1279px) {
   .header{
-    margin-bottom: 48px;
+    margin: 0 48px 48px 48px;
     max-width: 928px;
   }
 }
 @media screen and (max-width:1023px) {
   .header{
-    margin-bottom: 48px;
     max-width: 720px;
+    margin: 0 24px 48px 24px;
   }
 }
 @media screen and (max-width:767px) {
   .header{
-    margin-bottom: 48px;
     max-width: 288px;
+    margin: 0 16px 48px 16px;
   }
 }
