--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,4 +1,4 @@
-.place__website_url-heading {
+.place__url-heading {
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
   font-size: 12px;
@@ -6,4 +6,5 @@
   letter-spacing: 2px;
   color: #aaaaaa;
   margin: 0 0 12px 0;
+  text-transform:uppercase;
 }
