--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,20 +1,20 @@
 @font-face {
-    src: url(../vendor/Inter\ Web/Inter-Regular.woff2) format('woff2');
-    src: url(../vendor/Inter\ Web/Inter-Regular.woff) format('woff');
+    src: url(../vendor/Inter_Web/Inter-Regular.woff2) format('woff2');
+    src: url(../vendor/Inter_Web/Inter-Regular.woff) format('woff');
     font-family: 'Inter';
     font-style:  normal;
     font-weight: 400;
 }
 @font-face {
-    src: url(../vendor/Inter\ Web/Inter-Black.woff2) format('woff2');
-    src: url(../vendor/Inter\ Web/Inter-Black.woff) format('woff');
+    src: url(../vendor/Inter_Web/Inter-Black.woff2) format('woff2');
+    src: url(../vendor/Inter_Web/Inter-Black.woff) format('woff');
     font-family: 'Inter';
     font-style:  normal;
     font-weight: 900;
 }
 @font-face {
-    src: url(../vendor/Inter\ Web/Inter-Bold.woff2) format('woff2');
-    src: url(../vendor/Inter\ Web/Inter-Bold.woff) format('woff');
+    src: url(../vendor/Inter_Web/Inter-Bold.woff2) format('woff2');
+    src: url(../vendor/Inter_Web/Inter-Bold.woff) format('woff');
     font-family: 'Inter';
     font-style:  normal;
     font-weight: 700;
