--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption {
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-size: 10px;
   font-weight: 400;
   line-height: 1.4;
@@ -9,4 +9,3 @@
   margin: 0;
   max-width: 158px;
 }
-
