--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,3 +3,8 @@
     flex-direction: column;
     justify-content: flex-end;
 }
+@media screen and (max-width: 767px) {
+    .place__website {
+      margin: 0 16px 0 16px;
+    }
+  }
