--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -18,6 +18,7 @@
   .place {
     grid-template-columns: 340px 1fr;
     column-gap: 28px;
+    margin-bottom: 73px;
   }
 }
 @media screen and (max-width: 767px) {
