--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,5 +9,11 @@
 @media screen and (max-width: 1023px) {
   .place__paragraph {
     font-size: 16px;
+    margin: 0 0 25px 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .place__paragraph {
+    margin: 0 16px 25px 16px;
   }
 }
