--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -9,6 +9,11 @@
   margin: 0;
   max-width: 158px;
 }
+@media screen and (max-width:1023px) {
+  .lead__caption{
+    margin: 0 0 0 24px;
+  }
+}
 @media screen and (max-width:767px) {
   .lead__caption{
     margin: 0 16px 0 16px;
