--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,6 +6,7 @@
   text-align: right;
   color: #ffffff;
   max-width: 186px;
+  margin: 0;
 }
 @media screen and (max-width: 767px) {
   .footer__copyright {
