--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,6 +6,9 @@
   color: #ffffff;
   margin: 0 0 26px 0;
 }
+.place__paragraph:last-of-type{
+  margin: 0;
+}
 @media screen and (max-width: 1023px) {
   .place__paragraph {
     font-size: 16px;
@@ -15,5 +18,8 @@
 @media screen and (max-width: 767px) {
   .place__paragraph {
     margin: 0 16px 25px 16px;
+  }
+  .place__paragraph:last-of-type{
+    margin: 0 16px 0 16px;
   }
 }
